--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check:readme-sync": "node scripts/check-readme-sync.js",
     "build:tools-json": "cd mcp && npm run build && cd .. && node scripts/generate-tools-json.mjs",
     "build:tools-doc": "node scripts/generate-tools-doc.mjs",
-    "build:prompts-data": "node scripts/generate-prompts-data.mjs && node scripts/generate-prompts.mjs"
+    "build:prompts-data": "node scripts/generate-prompts-data.mjs && node scripts/generate-prompts.mjs",
+    "build:rules-sync": "node scripts/generate-rules-sync.mjs"
   },
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.16.0",
