--- a/mcp/package.json
+++ b/mcp/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@cloudbase/cloudbase-mcp",
-  "version": "2.7.5",
+  "version": "2.7.4",
   "description": "腾讯云开发 MCP Server，通过AI提示词和MCP协议+云开发，让开发更智能、更高效,当你在Cursor/ VSCode GitHub Copilot/WinSurf/CodeBuddy/Augment Code/Claude Code等AI编程工具里写代码时，它能自动帮你生成可直接部署的前后端应用+小程序，并一键发布到腾讯云开发 CloudBase。",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
   "bin": {
-    "cloudbase-mcp": "./dist/cli.cjs"
+    "cloudbase-mcp": "dist/cli.cjs"
   },
   "publishConfig": {
     "access": "public",
@@ -26,14 +26,14 @@
       "default": "./dist/index.js"
     }
   },
-  "homepage": "https://github.com/TencentCloudBase/CloudBase-AI-ToolKit",
+  "homepage": "https://github.com/TencentCloudBase/CloudBase-MCP",
   "bugs": {
-    "url": "https://github.com/TencentCloudBase/CloudBase-AI-ToolKit/issues",
+    "url": "https://github.com/TencentCloudBase/CloudBase-MCP/issues",
     "email": "bookerzhao@tencent.com"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TencentCloudBase/CloudBase-AI-ToolKit.git"
+    "url": "git+https://github.com/TencentCloudBase/CloudBase-MCP.git"
   },
   "scripts": {
     "clean": "rm -rf dist",
